--- a/index.html
+++ b/index.html
@@ -1,10 +1,114 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>Manuals App</title>
-  </head>
-  <body>
-    <h1>🚀 Manuals App is Live!</h1>
-    <p>If you can see this, deployment works.</p>
-  </body>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Manuals App</title>
+  <style>
+    body { font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif; margin: 0; background:#0f172a; color:#e2e8f0; }
+    header { padding: 28px 16px; text-align: center; border-bottom: 1px solid #1f2937; }
+    h1 { margin: 0 0 6px; font-size: 1.6rem; }
+    .wrap { max-width: 850px; margin: 28px auto; padding: 0 16px; }
+    .searchbar { display: flex; gap: 8px; }
+    input[type="search"] {
+      flex: 1; padding: 14px 16px; font-size: 1rem; border-radius: 10px; border: 1px solid #334155; background:#0b1220; color:#e2e8f0;
+      outline: none;
+    }
+    input[type="search"]::placeholder { color:#94a3b8; }
+    button {
+      padding: 14px 16px; font-weight: 600; border-radius: 10px; border: 1px solid #334155; background:#1e293b; color:#e2e8f0; cursor: pointer;
+    }
+    button:hover { background:#233245; }
+    .hint { color:#94a3b8; font-size: .9rem; margin-top: 10px; }
+    .results { margin-top: 20px; display: grid; gap: 10px; }
+    .card {
+      background:#0b1220; border:1px solid #223046; border-radius:12px; padding:14px 16px;
+    }
+    .title { font-weight:700; margin:0 0 4px; }
+    .meta { color:#94a3b8; font-size:.9rem; margin:0 0 8px; }
+    .tags { display:flex; gap:6px; flex-wrap:wrap; margin-top:6px; }
+    .tag { font-size:.78rem; padding:4px 8px; border:1px solid #334155; border-radius:999px; color:#cbd5e1; }
+    a.btn {
+      text-decoration:none; display:inline-block; margin-top:8px; padding:8px 10px; border:1px solid #334155; border-radius:8px; color:#e2e8f0;
+    }
+    .empty { color:#94a3b8; }
+  </style>
+</head>
+<body>
+  <header>
+    <h1>Manuals App</h1>
+    <div>Type to search mock data (we’ll wire real docs later)</div>
+  </header>
+
+  <main class="wrap">
+    <div class="searchbar">
+      <input id="q" type="search" placeholder="Search by brand, model, system, part… (e.g., 'Briggs 2200', 'Kawasaki', 'wiring')" autofocus />
+      <button id="go">Search</button>
+    </div>
+    <div class="hint">Press Enter to search • Clear the box to see everything</div>
+
+    <div id="results" class="results"></div>
+  </main>
+
+  <script>
+    // --- Mock seed data so you can test the flow ---
+    const DATA = [
+      { title: "Briggs & Stratton PXI 2200 – Service Manual", brand: "Briggs & Stratton", model: "PXI 2200", type: "Service Manual", year: "2024", url: "#", tags: ["engine", "torque specs", "governor", "troubleshooting"] },
+      { title: "Kawasaki FR Series – Electrical & Ignition", brand: "Kawasaki", model: "FR651V", type: "Electrical", year: "2023", url: "#", tags: ["ignition", "wiring", "coil", "CPS"] },
+      { title: "John Deere Ztrak 52\" – Operator’s Manual", brand: "John Deere", model: "Ztrak 52", type: "Operator", year: "2022", url: "#", tags: ["mower", "deck", "belts", "maintenance"] },
+      { title: "Polaris Ranger 1000XP – Front Suspension Guide", brand: "Polaris", model: "Ranger 1000XP", type: "Chassis", year: "2024", url: "#", tags: ["alignment", "toe", "tire wear", "front right"] },
+      { title: "Honda Pioneer 700 – Engine Timing & Sensors", brand: "Honda", model: "Pioneer 700", type: "Engine", year: "2017", url: "#", tags: ["crankshaft position sensor", "CPS", "timing"] },
+      { title: "Scag SLS 52 – Fuel Delivery Troubleshooting", brand: "Scag", model: "SLS 52", type: "Fuel", year: "2024", url: "#", tags: ["filter", "pickup", "bogging", "tall grass"] },
+    ];
+
+    const q = document.getElementById('q');
+    const go = document.getElementById('go');
+    const resultsEl = document.getElementById('results');
+
+    function normalize(s){ return (s||"").toLowerCase(); }
+
+    function matches(item, query){
+      const hay = [
+        item.title, item.brand, item.model, item.type, item.year,
+        ...(item.tags||[])
+      ].map(normalize).join(" ");
+      const q = normalize(query).trim();
+      if(!q) return true;
+      // simple multi-word AND match
+      return q.split(/\s+/).every(word => hay.includes(word));
+    }
+
+    function render(list){
+      resultsEl.innerHTML = "";
+      if(list.length === 0){
+        resultsEl.innerHTML = `<div class="card empty">No results. Try "Kawasaki", "Briggs 2200", or "wiring".</div>`;
+        return;
+      }
+      list.forEach(it => {
+        const card = document.createElement('div');
+        card.className = "card";
+        card.innerHTML = `
+          <div class="title">${it.title}</div>
+          <div class="meta">${it.brand} • ${it.model} • ${it.type} • ${it.year}</div>
+          <a class="btn" href="${it.url}">Open (placeholder)</a>
+          <div class="tags">${(it.tags||[]).map(t=>`<span class="tag">${t}</span>`).join("")}</div>
+        `;
+        resultsEl.appendChild(card);
+      });
+    }
+
+    function runSearch(){
+      const qv = q.value;
+      const filtered = DATA.filter(it => matches(it, qv));
+      render(filtered);
+    }
+
+    go.addEventListener('click', runSearch);
+    q.addEventListener('keydown', (e)=>{ if(e.key === 'Enter') runSearch(); });
+    q.addEventListener('input', runSearch);
+
+    // show all to start
+    render(DATA);
+  </script>
+</body>
 </html>
