--- a/index.html
+++ b/index.html
@@ -59,6 +59,8 @@
       { title: "Polaris Ranger 1000XP – Front Suspension Guide", brand: "Polaris", model: "Ranger 1000XP", type: "Chassis", year: "2024", url: "#", tags: ["alignment", "toe", "tire wear", "front right"] },
       { title: "Honda Pioneer 700 – Engine Timing & Sensors", brand: "Honda", model: "Pioneer 700", type: "Engine", year: "2017", url: "#", tags: ["crankshaft position sensor", "CPS", "timing"] },
       { title: "Scag SLS 52 – Fuel Delivery Troubleshooting", brand: "Scag", model: "SLS 52", type: "Fuel", year: "2024", url: "#", tags: ["filter", "pickup", "bogging", "tall grass"] },
+      { title: "Toro TimeCutter 5000 – Operator’s Manual",  brand: "Toro", model: "TimeCutter 5000", type: "Operator", year: "2021", url: "#", tags: ["mower", "deck", "safety", "maintenance"] 
+},
     ];
 
     const q = document.getElementById('q');
