--- a/index.html
+++ b/index.html
@@ -88,26 +88,27 @@
   }
 
   async function loadData(){
-    const cacheBuster = `ts=${Date.now()}`;                   // kill CDN/browser cache
-    const path = `data.json?${cacheBuster}`;                   // same folder as this HTML
-    try{
-      const res = await fetch(path, { cache: 'no-store' });    // tell browser not to cache
-      if(!res.ok) throw new Error(`HTTP ${res.status}`);
-      const data = await res.json();
+  try {
+    // call your Vercel serverless function
+    const res = await fetch('/api/data?ts=' + Date.now(), { cache: 'no-store' });
+    if(!res.ok) throw new Error(`HTTP ${res.status}`);
 
-      const runSearch = () => render(data.filter(it => matches(it, q.value)));
-      const runAll = () => render(data);
+    const data = await res.json();
 
-      go.addEventListener('click', runSearch);
-      q.addEventListener('keydown', e => { if(e.key === 'Enter') runSearch(); });
-      q.addEventListener('input', runSearch);
+    const runSearch = () => render(data.filter(it => matches(it, q.value)));
+    const runAll = () => render(data);
 
-      runAll(); // show all to start
-      console.log('✅ Loaded data.json');
-    }catch(err){
-      resultsEl.innerHTML = `<div class="card empty">Couldn’t load <code>data.json</code>. Make sure it’s deployed next to this HTML (or in /public). Then refresh.</div>`;
-      console.error('Failed to load data.json:', err);
-    }
+    go.addEventListener('click', runSearch);
+    q.addEventListener('keydown', e => { if(e.key === 'Enter') runSearch(); });
+    q.addEventListener('input', runSearch);
+
+    runAll(); // show all to start
+    console.log('✅ Loaded live data');
+  } catch(err) {
+    resultsEl.innerHTML = `<div class="card empty">Couldn’t load data. Check API route.</div>`;
+    console.error('Failed to load data:', err);
+  }
+}
   }
 
   loadData();
